--- a/BetterCMD/BetterCMD.lpi
+++ b/BetterCMD/BetterCMD.lpi
@@ -42,6 +42,7 @@
         <Filename Value="src\main.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="MainForm"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Main"/>
       </Unit1>
